<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_home_properties"
    android:background="#D1E0FB"
    android:paddingTop="10dp"
    style="@style/dialog" >

    <TextView
        style="@style/TextView"
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:text="@string/home_name"
        android:padding="4dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/archiveButton"
        android:layout_marginTop="10dp"
        android:text="@string/archive"
        android:textColor="#3A3A3A"
        android:backgroundTint="#F8F8F8"
        style="@style/CustomMaterialButton" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/deleteButton"
        android:layout_marginTop="5dp"
        android:text="@string/delete"
        android:textColor="@color/white"
        android:backgroundTint="@color/red"
        style="@style/CustomMaterialButton" />

    <TextView
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="15dp"
        android:layout_gravity="end"
        android:text="@string/cancel"
        android:textColor="#3A3A3A"
        android:backgroundTint="#CECECE"
        style="@style/TextView" />

</LinearLayout>