<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.auth.fragments.SignUpFragment"
    android:id="@+id/signUpFragment"
    style="@style/Fragment">

    <TextView
        android:id="@+id/title_textView"
        style="@style/TitleTextView"
        android:text="@string/title_sign_up_fragment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/main_container"/>

    <LinearLayout
        android:id="@+id/main_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_top_large"
        android:backgroundTint="@color/onPrimary"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingBottom="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            style="@style/TextView"
            android:text="@string/full_name_hint"
            android:layout_marginStart="26dp"
            android:layout_marginTop="50dp" />

        <androidx.cardview.widget.CardView
            style="@style/CardViewField" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/nameEditText"
                    style="@style/EditText"
                    android:autofillHints="name"
                    android:hint="@string/full_name"
                    android:inputType="textPersonName">

                </EditText>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            style="@style/TextView"
            android:text="@string/email"
            android:layout_marginStart="26dp"
            android:layout_marginTop="20dp" />

        <androidx.cardview.widget.CardView
            style="@style/CardViewField" >

            <LinearLayout
                android:id="@+id/pswdLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/emailEditText"
                    style="@style/EditText"
                    android:autofillHints="emailAddress"
                    android:hint="@string/email_hint"
                    android:inputType="textEmailAddress" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            style="@style/TextView"
            android:text="@string/date_of_birth"
            android:layout_marginStart="26dp"
            android:layout_marginTop="20dp" />

        <androidx.cardview.widget.CardView
            style="@style/CardViewField" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/dateEditText"
                    style="@style/EditText"
                    android:autofillHints="date"
                    android:inputType="none"
                    android:focusable="false"
                    android:hint="@string/date"
                    tools:ignore="TextFields">

                </EditText>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            style="@style/TextView"
            android:text="@string/password"
            android:layout_marginStart="26dp"
            android:layout_marginTop="20dp" />

        <androidx.cardview.widget.CardView
            style="@style/CardViewField" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/pswdEditText"
                    style="@style/EditText"
                    android:autofillHints="password"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword" />

                <ImageButton
                    android:id="@+id/eyeButton"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="10dp"
                    android:background="@null"
                    android:scaleType="fitCenter"
                    android:contentDescription="@string/error_image"
                    android:src="@drawable/ic_eye_close" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            style="@style/TextView"
            android:text="@string/confirm_password"
            android:layout_marginStart="26dp"
            android:layout_marginTop="20dp" />

        <androidx.cardview.widget.CardView
            style="@style/CardViewField">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/pswdConfirmEditText"
                    style="@style/EditText"
                    android:autofillHints="password"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword" />

                <ImageButton
                    android:id="@+id/eyeConfirmButton"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="10dp"
                    android:background="@null"
                    android:scaleType="fitCenter"
                    android:contentDescription="@string/error_image"
                    android:src="@drawable/ic_eye_close" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginButton"
            android:layout_marginTop="40dp"
            android:text="@string/sign_up_button"
            style="@style/Button" />

        <TextView
            style="@style/TextView"
            android:text="@string/terms_and_policy"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginStart="45dp"
            android:layout_marginEnd="45dp"
            android:textAlignment="center"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>