<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.auth.fragments.ResetPasswordFragment"
    style="@style/Fragment" >

    <TextView
        android:id="@+id/title_textView"
        style="@style/TitleTextView"
        android:text="@string/title_reset_pswd_fragment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/main_container"/>

    <LinearLayout
        android:id="@+id/main_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_top_large"
        android:backgroundTint="@color/onPrimary"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingBottom="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            style="@style/TextView"
            android:text="@string/forgot_password"
            android:layout_marginStart="26dp"
            android:layout_marginTop="50dp" />

        <TextView
            style="@style/TextView"
            android:text="@string/forgot_description"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="20dp" />

        <TextView
            style="@style/TextView"
            android:text="@string/email_enter"
            android:layout_marginStart="26dp"
            android:layout_marginTop="50dp" />

        <androidx.cardview.widget.CardView
            style="@style/CardViewField" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/emailEditText"
                    style="@style/EditText"
                    android:autofillHints="addressCity"
                    android:hint="@string/email_hint"
                    android:inputType="textEmailAddress">

                </EditText>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signInButton"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="60dp"
            android:text="@string/send"
            style="@style/Button" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>