<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/itemSensor"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="10dp"
    android:paddingEnd="10dp"
    android:paddingBottom="30dp" >

    <ImageView
        android:id="@+id/notificationImageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/error_image"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_notify"
        android:padding="7dp"
        android:background="@drawable/rounded_all_small_background"
        android:backgroundTint="@color/primary"
        app:tint="@color/white"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintWidth_percent="0.1"
        app:layout_constraintTop_toTopOf="@+id/titleTextView"
        app:layout_constraintBottom_toBottomOf="@+id/bodyTextView"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/titleTextView"
        style="@style/TextView"
        android:text="@string/notification_title"
        android:layout_marginStart="10dp"
        android:layout_width="0dp"
        android:maxLines="2"
        android:ellipsize="end"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/notificationImageView"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/bodyTextView"
        style="@style/TextView"
        android:text="@string/notification_body"
        android:textColor="@color/primary"
        android:layout_marginStart="10dp"
        android:layout_width="0dp"
        android:maxLines="3"
        android:ellipsize="end"
        app:layout_constraintStart_toEndOf="@+id/notificationImageView"
        app:layout_constraintTop_toBottomOf="@+id/titleTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/dateTextView" />

    <TextView
        android:id="@+id/dateTextView"
        style="@style/TextView"
        android:text="@string/notification_date"
        android:textColor="@color/primary"
        android:paddingTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bodyTextView" />

    <View
        style="@style/LineView"
        android:layout_height="0.5dp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/dateTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>